# prophet_yfinance

./: prophet_yfinance.py  pyproject.toml
.devcontainer/: devcontainer.json
